--- a/contact form.html
+++ b/contact form.html
@@ -29,7 +29,7 @@
  <input type="checkbox">C
  <input type="checkbox" >C++
  <input type="checkbox"  >Java
- <input type="checkbox"  >Python
+ <input type="checkbox"  >css
  <input type="checkbox"  >HTML
  <br><br>
 <label><b>College Name</b><font color="red">*</font></label>
